[gd_scene load_steps=9 format=1]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://game/level.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/td_charge2.png" type="Texture" id=3]
[ext_resource path="res://graphics/td_charge1.png" type="Texture" id=4]
[ext_resource path="res://graphics/td_gameover1.png" type="Texture" id=5]
[ext_resource path="res://graphics/td_gameover2.png" type="Texture" id=6]
[ext_resource path="res://Sound/zap_charge.ogg" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="game_field" type="Node2D" parent="."]

[node name="level_place" type="Node2D" parent="game_field"]

[node name="level" parent="game_field/level_place" instance=ExtResource( 2 )]

[node name="c" type="Label" parent="."]

visibility/visible = false
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
text = "200"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ind" type="Node2D" parent="."]

[node name="c" type="Sprite" parent="ind"]

texture = ExtResource( 3 )
centered = false
region = true
region_rect = Rect2( 0, 0, 256, 256 )

[node name="Sprite" type="Sprite" parent="ind"]

texture = ExtResource( 4 )
centered = false

[node name="gameover" type="Node2D" parent="."]

visibility/opacity = 0.0
transform/pos = Vector2( 0, 86 )

[node name="ColorFrame" type="ColorFrame" parent="gameover"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -86.0
margin/right = 1200.0
margin/bottom = 614.0
color = Color( 0, 0, 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="gameover"]

frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true
centered = false

[node name="stream_charge" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500


